cloud-formation/bastion-host/stack.yaml
AWSTemplateFormatVersion: '2010-09-09'  
Description: |
  This stack is used for creating the following Resources:
  1. Bastion Host Key Pair
  2. Bastion Host Security Group
  3. Bastion Host Instance

Parameters:
  ProjectName:
    Type: String
    Description: Name of the project
  
  EnvironmentName:
    Type: String
    Description: An environment name that will be prefixed to resource names

  StackName:
    Type: String
    Description: Name of the stack

  VpcId:
    Type: String
    Description: Please select the VPC where the bastion host will be deployed
  
  VpcCIDR:
    Type: String
    Description: Please enter the IP range (CIDR notation) for this VPC
  
  PublicSubnet1Id:
    Type: AWS::EC2::Subnet::Id
    Description: Please select the public subnet where the bastion host will be deployed

  HomeInternetRouterIp:
    Type: String
    Description: Please enter the IP address of your home internet router
  
  BastionHostInstanceType:
    Description: Please enter Bastion Host Instance Type
    Type: String

  BastionHostRootVolumeSize:
    Description: Please enter Bastion Host Root Volume Size
    Type: Number

Resources:
  BastionHostKeyPair:
   Type: 'AWS::EC2::KeyPair'
   Properties:
     KeyName: bastionHostKeys
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Bastion Host Key Pair
  
  BastionHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: BastionHostSecurityGroup
      Description: Security group for the bastion host
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref HomeInternetRouterIp
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref VpcCIDR
  
  BastionHostLauchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: BastionHostLauchTemplate
      LaunchTemplateData:
        ImageId: ami-0df435f331839b2d6
        InstanceType: !Ref BastionHostInstanceType
        KeyName: !Ref BastionHostKeyPair.KeyName
        SecurityGroupIds:
          - !Ref BastionHostSecurityGroup
        BlockDeviceMappings:
          - DeviceName: /dev/sda1
            Ebs:
              VolumeSize: !Ref BastionHostRootVolumeSize
              VolumeType: gp2 # Choose an appropriate volume type (e.g., gp2, io1)
              DeleteOnTermination: true
        Monitoring:
          Enabled: true
        TagSpecifications:
          - ResourceType: instance
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Bastion Host Instance
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            yum update -y 

            # Download the public key from S3
            aws s3 cp s3://${S3BucketName}/pkey/ssh-client-key.pub /tmp/ssh-client-key.pub

            # Add the key to authorized_keys
            cat /tmp/ssh-client-key.pub >> /home/ec2-user/.ssh/authorized_keys

            # Ensure the correct permissions
            chown ec2-user:ec2-user /home/ec2-user/.ssh/authorized_keys
            chmod 600 /home/ec2-user/.ssh/authorized_keys
  
  BastionHostPlacementGroup:
    Type: AWS::EC2::PlacementGroup
    Properties:
      Strategy: cluster
      GroupName: BastionHostPlacementGroup

  BastionHostAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: BastionHostAutoScalingGroup
      LaunchTemplate:
        LaunchTemplateId: !Ref BastionHostLauchTemplate
        Version: !GetAtt BastionHostLauchTemplate.LatestVersionNumber
      MinSize: 1
      MaxSize: 1
      DesiredCapacity: 1
      VPCZoneIdentifier:
        - !Ref PublicSubnet1Id
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Bastion Host Instance
          PropagateAtLaunch: true
      PlacementGroup: !Ref BastionHostPlacementGroup

Outputs:
  BastionHostSecurityGroupId:
    Description: Security Group ID of the bastion host
    Value: !Ref BastionHostSecurityGroup
    Export:
      Name: !Sub ${ProjectName}-${EnvironmentName}-${StackName}-BastionHostSecurityGroupId

  BastionHostKeyPairName:
    Description: Name of the Bastion Host Key Pair
    Value: !GetAtt BastionHostKeyPair.KeyName

  BastionHostInstanceId:
    Description: ID of the Bastion Host Instance
    Value: !Ref BastionHostInstance
